--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,14 @@ vignettes/*.pdf
 /*_cache/
 /cache/
 
+
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+
+# Data
+/data/
